--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,11 @@ img {
     z-index: 10;
 }
 
+.hero.blog {
+    background: url('../images/home/blog.jpg') no-repeat center center/cover;
+    height: 30vh;
+}
+
 /* Icons */
 .icons {
     padding: 30px;
@@ -171,6 +176,28 @@ img {
      margin-top: 20px;
  }
 
+ /* Post */
+ .post {
+     padding: 50px 30px;
+ }
+
+ .post h2 {
+     font-size: 40px;
+     margin-bottom: 20px;
+     padding-bottom: 10px;
+     border-bottom: #ccc 1px solid;
+ }
+
+ .post .meta {
+     margin-botttom: 30px;
+ }
+
+ .post img {
+     width: 300px;
+     border-radius: 50%;
+     display: block;
+     margin: 0 auto 30px;
+ }
  /* Footer */
  .footer {
      display: flex;
